<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Cloud_Quake_Sensor</string>
    <string name="start_button">Start</string>
    <string name="stop_button">Stop</string>
    <string name="action_settings">Settings</string>
    
    <string name="x_axis">X:</string>
    <string name="y_axis">Y:</string>
    <string name="z_axis">Z:</string>
    
    <string name="x_axis_val">0.0</string>
    <string name="y_axis_val">0.0</string>
    <string name="z_axis_val">0.0</string>
    
    <string name="time">Time: </string>
    <string name="time_val">0.0</string>

</resources>
